<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewNumerosOrdenados"
        android:layout_width="376dp"
        android:layout_height="174dp"
        android:layout_marginTop="522dp"
        android:text="@string/textViewNumerosOrdenados"
        app:layout_constraintBottom_toTopOf="@+id/buttonOrdenar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout" />

    <Button
        android:id="@+id/buttonOrdenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber2"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber4"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber5"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber6"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber7"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber8"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber9"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber11"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber12"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber13"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber14"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber15"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber16"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber17"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber18"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNumber19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber19"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/editTextNumber20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextNumber20"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>